[B]Version 1.1.56[/B]
Perverzija - added contextmenu to lookup info from the video