@@ -1,2 +1,4 @@
 [B]Version 1.1.56[/B]
 Perverzija - added contextmenu to lookup info from the video
+animeidhentai - fix listing
+heantaihavenco - fix listing
